methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:21: error: expected class or object definition
def faireMotif() {
^PictureMono2:27: error: expected class or object definition
def FaireV() {
^PictureMono2:30: error: expected class or object definition
def marquerLeSol() {
^PictureMono2:34: error: Unmatched closing brace '}' ignored here
}
^